--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ model:
   feature_extractor: wide_resnet101_2 #wide_resnet101_2  # wide_resnet50_2 #resnet50
   learning_rate: 3e-4 
   weight_decay: 0.05
-  epochs: 300
+  epochs: 300 #3000 original
   load_chp : 2000 # From this epoch checkpoint will be loaded. Every 250 epochs a checkpoint is saved. Try to load 750 or 1000 epochs for Visa and 1000-1500-2000 for MVTec.
   DA_epochs: 4 # Number of epochs for Domain adaptation.
   DA_chp: 4
